# iplodcast

./: README.md  iplodcast.py  iplodcast.yaml  pyproject.toml
.github/workflows/: pylint.yml
iplodcast/: main.py
